--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "gulp": "^5.0.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.77.8"
